--- a/css/style.css
+++ b/css/style.css
@@ -907,6 +907,7 @@ label {
   .progress__inner-content {
     flex-wrap: wrap;
     gap: 20px 0;
+    justify-content: center;
   }
 
   /* ------------------- */
