--- a/css/style.css
+++ b/css/style.css
@@ -559,6 +559,7 @@ li {
   flex-direction: column;
   gap: 56px 0;
   background: url(../img/practice/practice-bg.jpg) no-repeat center;
+  background-size: cover;
   position: relative;
   z-index: 0;
 }
@@ -972,6 +973,10 @@ label {
   }
   .form-submit {
     width: 300px;
+  }
+  .form-file {
+    max-width: 300px;
+    width: 100%;
   }
 
   /* ------------------- */
