--- a/css/style.css
+++ b/css/style.css
@@ -825,6 +825,15 @@ label {
   width: 200px;
   font-size: 18px;
 }
+.error-message {
+  color: red;
+  font-size: 14px;
+  position: absolute;
+  top: -20px;
+  left: 10px;
+  font-weight: 700;
+}
+
 
 /* ------------------- */
 
